@@ -1801,6 +1801,7 @@ float32 Q_flrand(float32 min, float32 max);
 bool Q_CleanPlayerName(pointer in, valueType *out, sint outSize);
 sint COM_CompressBracedSection(valueType **data_p, valueType **name,
                                valueType **text, sint *nameLength, sint *textLength);
+valueType *COM_SkipPath(valueType *pathname);
 
 #define KEYBOARDCTRL(a) ((a)-'a'+1)
 
