@@ -3447,9 +3447,7 @@ void idRenderSystemLocal::LoadWorld(pointer name) {
     ::memset(&s_worldData, 0, sizeof(s_worldData));
     Q_strncpyz(s_worldData.name, name, sizeof(s_worldData.name));
 
-    Q_strncpyz(s_worldData.baseName, SkipPath(s_worldData.baseName),
-               sizeof(s_worldData.name));
-    COM_StripExtension2(s_worldData.baseName, s_worldData.baseName,
+    COM_StripExtension2(COM_SkipPath(s_worldData.name), s_worldData.baseName,
                         sizeof(s_worldData.baseName));
 
     startMarker = (uchar8 *)memorySystem->Alloc(0, h_low);
