@@ -1,6 +1,7 @@
 2021-06-14 Dusan Jocic <dusanjocic@msn.com>
 	* [Engine] Renderer dynamic module should have dot (.) before arch
 	* [Engine] Early out of idCmdSystemLocal::CompleteArgument and idCmdSystemLocal::SetCommandCompletionFunc
+	* [Engine] Fixed few memory leaks
 
 2021-06-13 Dusan Jocic <dusanjocic@msn.com>
 	* [RenderSystem] Fixed blended of texture detail
